// =============================================================================
// Floor Plan Service Proto
// =============================================================================
// Сервис управления планировками:
// - Загрузка и хранение изображений планировок
// - Запуск распознавания через AI Service
// - Создание сцен из распознанных данных
//
// Version: 1.0.0
// =============================================================================

syntax = "proto3";

package floor_plan.v1;

option go_package = "github.com/xiiisorate/granula_api/shared/gen/floor_plan/v1;floorplanv1";

import "common/v1/common.proto";
import "google/protobuf/timestamp.proto";

// =============================================================================
// Floor Plan Service
// =============================================================================

service FloorPlanService {
  // Upload — загрузить новую планировку.
  rpc Upload(UploadFloorPlanRequest) returns (UploadFloorPlanResponse);
  
  // Get — получить планировку по ID.
  rpc Get(GetFloorPlanRequest) returns (GetFloorPlanResponse);
  
  // List — список планировок воркспейса.
  rpc List(ListFloorPlansRequest) returns (ListFloorPlansResponse);
  
  // Update — обновить метаданные планировки.
  rpc Update(UpdateFloorPlanRequest) returns (UpdateFloorPlanResponse);
  
  // Delete — удалить планировку.
  rpc Delete(DeleteFloorPlanRequest) returns (DeleteFloorPlanResponse);
  
  // Process — запустить распознавание планировки.
  rpc Process(ProcessFloorPlanRequest) returns (ProcessFloorPlanResponse);
  
  // GetProcessingStatus — статус обработки.
  rpc GetProcessingStatus(GetProcessingStatusRequest) returns (GetProcessingStatusResponse);
  
  // CreateScene — создать сцену из распознанной планировки.
  rpc CreateScene(CreateSceneFromFloorPlanRequest) returns (CreateSceneFromFloorPlanResponse);
  
  // GetThumbnail — получить превью планировки.
  rpc GetThumbnail(GetThumbnailRequest) returns (GetThumbnailResponse);
}

// =============================================================================
// Floor Plan Entity
// =============================================================================

// FloorPlan — планировка помещения.
message FloorPlan {
  // Уникальный ID.
  string id = 1;
  
  // ID воркспейса.
  string workspace_id = 2;
  
  // Название.
  string name = 3;
  
  // Описание.
  string description = 4;
  
  // Информация о файле.
  FileInfo file = 5;
  
  // Статус обработки.
  ProcessingStatus status = 6;
  
  // Результат распознавания (если обработано).
  RecognitionResult recognition = 7;
  
  // ID созданной сцены (если создана).
  string scene_id = 8;
  
  // Метаданные аудита.
  common.v1.AuditInfo audit = 9;
}

// FileInfo — информация о файле.
message FileInfo {
  // Оригинальное имя файла.
  string original_name = 1;
  
  // MIME тип.
  string content_type = 2;
  
  // Размер в байтах.
  int64 size = 3;
  
  // URL для скачивания (signed URL).
  string url = 4;
  
  // URL превью.
  string thumbnail_url = 5;
  
  // Размеры изображения.
  common.v1.Dimensions2D dimensions = 6;
}

// ProcessingStatus — статус обработки планировки.
message ProcessingStatus {
  // Текущее состояние.
  ProcessingState state = 1;
  
  // Прогресс (0-100).
  int32 progress = 2;
  
  // ID задачи обработки.
  string job_id = 3;
  
  // Время начала обработки.
  google.protobuf.Timestamp started_at = 4;
  
  // Время завершения.
  google.protobuf.Timestamp completed_at = 5;
  
  // Ошибка (если state=FAILED).
  string error = 6;
}

// ProcessingState — состояние обработки.
enum ProcessingState {
  PROCESSING_STATE_UNSPECIFIED = 0;
  PROCESSING_STATE_PENDING = 1;     // Ожидает обработки
  PROCESSING_STATE_UPLOADING = 2;   // Загрузка файла
  PROCESSING_STATE_PROCESSING = 3;  // Распознавание
  PROCESSING_STATE_COMPLETED = 4;   // Завершено успешно
  PROCESSING_STATE_FAILED = 5;      // Ошибка
}

// RecognitionResult — результат распознавания.
message RecognitionResult {
  // Уверенность распознавания (0-1).
  float confidence = 1;
  
  // Определённый масштаб.
  float detected_scale = 2;
  
  // Размеры помещения.
  common.v1.Dimensions2D dimensions = 3;
  
  // Общая площадь (кв.м).
  float total_area = 4;
  
  // Количество распознанных комнат.
  int32 rooms_count = 5;
  
  // Количество несущих стен.
  int32 load_bearing_walls_count = 6;
  
  // Предупреждения распознавания.
  repeated string warnings = 7;
  
  // Версия модели.
  string model_version = 8;
}

// =============================================================================
// Request/Response Messages
// =============================================================================

// UploadFloorPlanRequest — загрузка планировки.
message UploadFloorPlanRequest {
  // ID воркспейса.
  string workspace_id = 1;
  
  // Название.
  string name = 2;
  
  // Описание.
  string description = 3;
  
  // Содержимое файла.
  bytes content = 4;
  
  // MIME тип.
  string content_type = 5;
  
  // Оригинальное имя файла.
  string filename = 6;
  
  // Автоматически запустить распознавание.
  bool auto_process = 7;
}

// UploadFloorPlanResponse
message UploadFloorPlanResponse {
  FloorPlan floor_plan = 1;
}

// GetFloorPlanRequest
message GetFloorPlanRequest {
  string floor_plan_id = 1;
}

// GetFloorPlanResponse
message GetFloorPlanResponse {
  FloorPlan floor_plan = 1;
}

// ListFloorPlansRequest
message ListFloorPlansRequest {
  string workspace_id = 1;
  
  // Фильтр по статусу.
  ProcessingState status = 2;
  
  // Пагинация.
  common.v1.PaginationRequest pagination = 3;
  
  // Сортировка.
  common.v1.SortField sort = 4;
}

// ListFloorPlansResponse
message ListFloorPlansResponse {
  repeated FloorPlan floor_plans = 1;
  common.v1.PaginationResponse pagination = 2;
}

// UpdateFloorPlanRequest
message UpdateFloorPlanRequest {
  string floor_plan_id = 1;
  optional string name = 2;
  optional string description = 3;
}

// UpdateFloorPlanResponse
message UpdateFloorPlanResponse {
  FloorPlan floor_plan = 1;
}

// DeleteFloorPlanRequest
message DeleteFloorPlanRequest {
  string floor_plan_id = 1;
  
  // Удалить связанную сцену.
  bool delete_scene = 2;
}

// DeleteFloorPlanResponse
message DeleteFloorPlanResponse {
  bool success = 1;
}

// ProcessFloorPlanRequest — запуск распознавания.
message ProcessFloorPlanRequest {
  string floor_plan_id = 1;
  
  // Опции распознавания.
  ProcessingOptions options = 2;
}

// ProcessingOptions — опции обработки.
message ProcessingOptions {
  // Определять несущие стены.
  bool detect_load_bearing = 1;
  
  // Определять мокрые зоны.
  bool detect_wet_zones = 2;
  
  // Определять мебель.
  bool detect_furniture = 3;
  
  // Известный масштаб (0 = авто).
  float scale = 4;
  
  // Уровень детализации (1-3).
  int32 detail_level = 5;
}

// ProcessFloorPlanResponse
message ProcessFloorPlanResponse {
  // ID задачи обработки.
  string job_id = 1;
  
  // Обновлённый статус.
  ProcessingStatus status = 2;
}

// GetProcessingStatusRequest
message GetProcessingStatusRequest {
  string floor_plan_id = 1;
}

// GetProcessingStatusResponse
message GetProcessingStatusResponse {
  ProcessingStatus status = 1;
  
  // Результат (если завершено).
  RecognitionResult result = 2;
}

// CreateSceneFromFloorPlanRequest — создать сцену из планировки.
message CreateSceneFromFloorPlanRequest {
  string floor_plan_id = 1;
  
  // Название сцены (по умолчанию = название планировки).
  string scene_name = 2;
}

// CreateSceneFromFloorPlanResponse
message CreateSceneFromFloorPlanResponse {
  // ID созданной сцены.
  string scene_id = 1;
  
  // Обновлённая планировка.
  FloorPlan floor_plan = 2;
}

// GetThumbnailRequest — получить превью.
message GetThumbnailRequest {
  string floor_plan_id = 1;
  
  // Размер превью.
  ThumbnailSize size = 2;
}

// ThumbnailSize — размер превью.
enum ThumbnailSize {
  THUMBNAIL_SIZE_UNSPECIFIED = 0;
  THUMBNAIL_SIZE_SMALL = 1;   // 150x150
  THUMBNAIL_SIZE_MEDIUM = 2;  // 300x300
  THUMBNAIL_SIZE_LARGE = 3;   // 600x600
}

// GetThumbnailResponse
message GetThumbnailResponse {
  // URL превью (signed).
  string url = 1;
  
  // Или содержимое напрямую.
  bytes content = 2;
  
  // MIME тип.
  string content_type = 3;
}

